Example: Fixed api path.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/example-jquery.html
+++ b/src/html/example-jquery.html
@@ -55,7 +55,7 @@ padding:5px;
 
 $(function() {
     /* initialize rpijs */
-    $.rpijs.init("http://localhost:2001/rpi/api/", "admin", "admin");
+    $.rpijs.init("./api/", "admin", "admin");
 
     /* change formatDefaults */
     $.rpijs.formatDefaults.valueType = "binary";
