Dashboard: Implemented memory page.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>RPi Dashboard</title>
 
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/signin.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body ng-app="rpiDashboard">
@@ -42,6 +45,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular-route.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular-cookies.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script src="js/angular/ng-google-chart.js"></script>
 <script src="js/angular/dashboard.js"></script>
 <script src="js/angular/login.js"></script>
 <script src="js/angular/navigation.js"></script>
