--- a/src/html/index.html
+++ b/src/html/index.html
@@ -52,6 +52,7 @@
 <script src="js/angular/navigation.js"></script>
 <script src="js/angular/cpu.js"></script>
 <script src="js/angular/memory.js"></script>
+<script src="js/angular/network.js"></script>
 
 </body>
 
