Dashboard: Implemented storage page for dashboard.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -53,6 +53,7 @@
 <script src="js/angular/cpu.js"></script>
 <script src="js/angular/memory.js"></script>
 <script src="js/angular/network.js"></script>
+<script src="js/angular/storage.js"></script>
 
 </body>
 
