Dashboard: Graphs display last minute of history.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -48,6 +48,7 @@
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script src="js/angular/ng-google-chart.js"></script>
 <script src="js/angular/dashboard.js"></script>
+<script src="js/angular/history.js"></script>
 <script src="js/angular/login.js"></script>
 <script src="js/angular/navigation.js"></script>
 <script src="js/angular/cpu.js"></script>
