Dashboard: Added main page.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -55,6 +55,7 @@
 <script src="js/angular/memory.js"></script>
 <script src="js/angular/network.js"></script>
 <script src="js/angular/storage.js"></script>
+<script src="js/angular/main.js"></script>
 
 </body>
 
