Dashboard: Container div moved to index.html.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -37,7 +37,9 @@
     </div>
 </div>
 
-<div ng-view></div>
+<div class="container">
+    <div ng-view></div>
+</div>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="js/jquery.rpijs.js"></script>
