--- a/src/html/index.html
+++ b/src/html/index.html
@@ -56,6 +56,7 @@
 <script src="js/angular/memory.js"></script>
 <script src="js/angular/network.js"></script>
 <script src="js/angular/storage.js"></script>
+<script src="js/angular/gpio.js"></script>
 <script src="js/angular/main.js"></script>
 
 </body>
