Dashboard: Added i2c page.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -57,6 +57,7 @@
 <script src="js/angular/network.js"></script>
 <script src="js/angular/storage.js"></script>
 <script src="js/angular/gpio.js"></script>
+<script src="js/angular/i2c.js"></script>
 <script src="js/angular/main.js"></script>
 
 </body>
