Dashboard: Added SPI to dashboard.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -58,6 +58,7 @@
 <script src="js/angular/storage.js"></script>
 <script src="js/angular/gpio.js"></script>
 <script src="js/angular/i2c.js"></script>
+<script src="js/angular/spi.js"></script>
 <script src="js/angular/main.js"></script>
 
 </body>
