Dashboard: Added shift page.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -59,6 +59,7 @@
 <script src="js/angular/gpio.js"></script>
 <script src="js/angular/i2c.js"></script>
 <script src="js/angular/spi.js"></script>
+<script src="js/angular/shift.js"></script>
 <script src="js/angular/main.js"></script>
 
 </body>
