--- a/src/html/index.html
+++ b/src/html/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li ng-repeat="menuEntry in menu" ng-class="menuClass(menuEntry.path)"><a href="#{{menuEntry.path}}">{{menuEntry.name}}</a></li>
+            <li ng-repeat="menuEntry in menu" ng-class="menuClass(menuEntry.path)"><a href="#{{menuEntry.path}}" title="{{menuEntry.title}}">{{menuEntry.name}}</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li ng-hide="loggedIn"><a href="#/login">Login</a></li>
