Dashboard: Changed javascript locations and added makefile compression.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -48,27 +48,27 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
-<script src="js/jquery.rpijs.js"></script>
+<script src="js/jquery-rpijs.min.js"></script>
 <script src="js/jquery.ui.touch-punch.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular-route.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular-cookies.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<script src="js/angular/ng-google-chart.js"></script>
-<script src="js/angular/dashboard.js"></script>
-<script src="js/angular/history.js"></script>
-<script src="js/angular/login.js"></script>
-<script src="js/angular/navigation.js"></script>
-<script src="js/angular/main.js"></script>
-<script src="js/angular/cpu.js"></script>
-<script src="js/angular/memory.js"></script>
-<script src="js/angular/network.js"></script>
-<script src="js/angular/storage.js"></script>
-<script src="js/angular/gpio.js"></script>
-<script src="js/angular/i2c.js"></script>
-<script src="js/angular/spi.js"></script>
-<script src="js/angular/serial.js"></script>
-<script src="js/angular/shift.js"></script>
+<script src="js/ng-google-chart.js"></script>
+<script src="js/angular-dashboard/dashboard.js"></script>
+<script src="js/angular-dashboard/history.js"></script>
+<script src="js/angular-dashboard/login.js"></script>
+<script src="js/angular-dashboard/navigation.js"></script>
+<script src="js/angular-dashboard/main.js"></script>
+<script src="js/angular-dashboard/cpu.js"></script>
+<script src="js/angular-dashboard/memory.js"></script>
+<script src="js/angular-dashboard/network.js"></script>
+<script src="js/angular-dashboard/storage.js"></script>
+<script src="js/angular-dashboard/gpio.js"></script>
+<script src="js/angular-dashboard/i2c.js"></script>
+<script src="js/angular-dashboard/spi.js"></script>
+<script src="js/angular-dashboard/serial.js"></script>
+<script src="js/angular-dashboard/shift.js"></script>
 
 </body>
 
