--- a/src/html/index.html
+++ b/src/html/index.html
@@ -55,20 +55,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular-cookies.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script src="js/ng-google-chart.js"></script>
-<script src="js/angular-dashboard/dashboard.js"></script>
-<script src="js/angular-dashboard/history.js"></script>
-<script src="js/angular-dashboard/login.js"></script>
-<script src="js/angular-dashboard/navigation.js"></script>
-<script src="js/angular-dashboard/main.js"></script>
-<script src="js/angular-dashboard/cpu.js"></script>
-<script src="js/angular-dashboard/memory.js"></script>
-<script src="js/angular-dashboard/network.js"></script>
-<script src="js/angular-dashboard/storage.js"></script>
-<script src="js/angular-dashboard/gpio.js"></script>
-<script src="js/angular-dashboard/i2c.js"></script>
-<script src="js/angular-dashboard/spi.js"></script>
-<script src="js/angular-dashboard/serial.js"></script>
-<script src="js/angular-dashboard/shift.js"></script>
+<script src="js/angular-dashboard.min.js"></script>
 
 </body>
 
