--- a/src/html/index.html
+++ b/src/html/index.html
@@ -48,14 +48,11 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
-<script src="js/jquery-rpijs.min.js"></script>
-<script src="js/jquery.ui.touch-punch.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular-route.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular-cookies.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<script src="js/ng-google-chart.js"></script>
-<script src="js/angular-dashboard.min.js"></script>
+<script src="js/javascript.js"></script>
 
 </body>
 
